--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/Jben13/TD_MS_githubData#readme",
   "dependencies": {
     "apollo-boost": "^0.1.16",
+    "apollo-errors": "^1.9.0",
     "apollo-server": "^2.1.0",
     "graphql": "^14.0.2",
+    "graphql-sequelize": "^9.0.1",
     "graphql-tools": "^4.0.0",
+    "pg": "^7.5.0",
     "pg-promise": "^8.4.6",
     "sequelize": "^4.39.0"
   }
